# quant-based-backtrader

./: .gitignore  CONTRIBUTING.md  README.md  main.py  pyproject.toml  requirements.txt  test.py
commission/: __init__.py  commission.py
config/: config.toml  strategy_config.toml
data/: __init__.py  akshare_data.py  db_based_tushare.py  db_reader.py
docs/data/: db_based_tushare.md
docs/strategy/: trade_strategy.md
strategy/: __init__.py  config_loader.py  macd_strategy.py  trade_strategy.py
tests/: test_trade_strategy.py
