[project]
name = "backtrader-trading"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.11.12"
dependencies = [
    "backtracker>=0.0.7",
    "pandas>=2.0.3",
    "akshare>=1.9.73",
]

[dependency-groups]
dev = [
    "mypy==1.11.0",
    "pre-commit==4.2.0",
    "ruff==0.5.5",
]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["grammars", ".git", "__pycache__", "*.egg-info", ".venv", "venv"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
