[project]
name = "backtrader-trading"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.11.12"
dependencies = [
    "backtrader>=1.9.76.123",
    "pandas>=2.0.3",
    "akshare>=1.9.73",
    "matplotlib>=3.2.2",
    "scipy>=1.11.0",
    "sqlalchemy>=2.0.0",
    "tushare>=1.2.89",
    "python-dotenv>=1.0.0",
    "sqlmodel>=0.0.16",
    "prettytable>=3.17.0",
]

[dependency-groups]
dev = [
    "mypy==1.11.0",
    "pre-commit==4.2.0",
    "pytest==8.3.3",
    "ruff==0.5.5",
]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["grammars", ".git", "__pycache__", "*.egg-info", ".venv", "venv"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
